# despatma

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  scripts.sh  shell.nix
despatma/: CHANGELOG.md  Cargo.toml  README.md
despatma-abstract-factory/: CHANGELOG.md  Cargo.toml  README.md
despatma-abstract-factory/src/: lib.rs
despatma-abstract-factory/tests/: tests.rs
despatma-abstract-factory/tests/expand/: complex.expanded.rs  complex.rs  multiple.expanded.rs  multiple.rs  multiple_dyn.expanded.rs  multiple_dyn.rs  simple.expanded.rs  simple.rs  simple_dyn.expanded.rs  simple_dyn.rs  simple_extra_trait.expanded.rs  simple_extra_trait.rs
despatma-abstract-factory/tests/fail/: invalid_dyn.rs  invalid_dyn.stderr  missing_interpolation.rs  missing_interpolation.stderr  missing_types.rs  missing_types.stderr  tmpl_syntax_error.rs  tmpl_syntax_error.stderr
despatma-dependency-container/: CHANGELOG.md  Cargo.toml  README.md
despatma-dependency-container/src/: container.rs  input.rs  lib.rs  output.rs
despatma-dependency-container/src/processing/: mod.rs
despatma-dependency-container/src/processing/visitor/: add_wildcard_lifetime.rs  extract_async.rs  extract_box_type.rs  extract_embedded_dependency.rs  extract_lifetime.rs  impl_trait_but_registered_concrete.rs  impl_trait_fields.rs  link_dependencies.rs  mod.rs  owning_managed_dependency.rs  replace_impl_generics_with_concrete.rs  set_has_explicit_lifetime.rs  set_needs_generic_lifetime.rs  unsupported_registered_types.rs  wrap_box_type.rs
despatma-dependency-container/src/visitor/: check_wiring.rs  extract_box_type.rs  fix_async_tree.rs  impl_trait_but_registered_concrete.rs  mod.rs  set_output_spans.rs
despatma-dependency-container/tests/: tests.rs
despatma-dependency-container/tests/expand/: async-singleton-dependency.expanded.rs  async-singleton-dependency.rs  async_constructor_argument.expanded.rs  async_constructor_argument.rs  async_dep.expanded.rs  async_dep.rs  box_dyn_trait.expanded.rs  box_dyn_trait.rs  box_dyn_trait_return_impl.expanded.rs  box_dyn_trait_return_impl.rs  box_dyn_trait_with_lifetime.expanded.rs  box_dyn_trait_with_lifetime.rs  constructor_argument.expanded.rs  constructor_argument.rs  container_composition.expanded.rs  container_composition.rs  documented.expanded.rs  documented.rs  impl_trait_registering_concrete.expanded.rs  impl_trait_registering_concrete.rs  lifetime_with_managed_impl_trait_generic.expanded.rs  lifetime_with_managed_impl_trait_generic.rs  rpit.expanded.rs  rpit.rs  scoped-lifetime.expanded.rs  scoped-lifetime.rs  side-effects.expanded.rs  side-effects.rs  simple.expanded.rs  simple.rs  simple_reference.expanded.rs  simple_reference.rs  singleton-lifetime-box-dyn-trait.expanded.rs  singleton-lifetime-box-dyn-trait.rs  singleton-lifetime-impl-trait-with-box.expanded.rs  singleton-lifetime-impl-trait-with-box.rs  singleton-lifetime-impl-trait.expanded.rs  singleton-lifetime-impl-trait.rs  singleton-lifetime.expanded.rs  singleton-lifetime.rs  (+4 more)
despatma-dependency-container/tests/fail/: constructor_argument_impl_trait.rs  constructor_argument_impl_trait.stderr  dependency_misspell.rs  dependency_misspell.stderr  impl_trait_but_requesting_concrete.rs  impl_trait_but_requesting_concrete.stderr  lifetimes_with_impl_trait_but_no_concrete.rs  lifetimes_with_impl_trait_but_no_concrete.stderr  mismatch_return_type.rs  mismatch_return_type.stderr  taking_ownership_of_managed_dependency.rs  taking_ownership_of_managed_dependency.stderr  unsupported_fn_args.rs  unsupported_fn_args.stderr  unsupported_impl_types.rs  unsupported_impl_types.stderr
despatma-lib/: CHANGELOG.md  Cargo.toml
despatma-lib/src/: annotated_type.rs  extensions.rs  key_value.rs  lib.rs  options_attribute.rs  simple_type.rs  trait_specifier.rs
despatma-visitor/: CHANGELOG.md  Cargo.toml  README.md
despatma-visitor/src/: lib.rs  visitor.rs
despatma-visitor/tests/expand/: complex.expanded.rs  complex.rs  compound_name.expanded.rs  compound_name.rs  helper_tmpl.expanded.rs  helper_tmpl.rs  multiple.expanded.rs  multiple.rs  no_default.expanded.rs  no_default.rs  simple.expanded.rs  simple.rs  visitor_mut.expanded.rs  visitor_mut.rs
despatma-visitor/tests/fail/: double_options_attr.rs  double_options_attr.stderr  helper_tmpl_syntax_error.rs  helper_tmpl_syntax_error.stderr  invalid_dyn.rs  invalid_dyn.stderr  missing_types.rs  missing_types.stderr
despatma/examples/: dependency-container-complex.rs  dependency-container.rs
despatma/src/: abstract_factory.rs  dependency_container.rs  lib.rs  visitor.rs
despatma/src/dependency_container/: mod.rs
despatma/src/dependency_container/visitor/: async_visitor.rs  check_wiring.rs  fix_async_tree.rs  impl_trait_but_registered_concrete.rs  mod.rs  wiring_visitor.rs
despatma/tests/: tests.rs
despatma/tests/expand/abstract_factory/: complex.expanded.rs  complex.rs  multiple.expanded.rs  multiple.rs  multiple_dyn.expanded.rs  multiple_dyn.rs  simple.expanded.rs  simple.rs  simple_dyn.expanded.rs  simple_dyn.rs  simple_extra_trait.expanded.rs  simple_extra_trait.rs
despatma/tests/expand/dependency_container/: async_dep.expanded.rs  async_dep.rs  box_dyn_trait.expanded.rs  box_dyn_trait.rs  box_dyn_trait_return_impl.expanded.rs  box_dyn_trait_return_impl.rs  documented.expanded.rs  documented.rs  impl_trait_registering_concrete.expanded.rs  impl_trait_registering_concrete.rs  rpit.rs  simple.expanded.rs  simple.rs  simple_reference.expanded.rs  simple_reference.rs
despatma/tests/expand/visitor/: complex.expanded.rs  complex.rs  helper_tmpl.expanded.rs  helper_tmpl.rs  multiple.expanded.rs  multiple.rs  no_default.expanded.rs  no_default.rs  simple.expanded.rs  simple.rs
despatma/tests/fail/abstract_factory/: invalid_dyn.rs  invalid_dyn.stderr  missing_interpolation.rs  missing_interpolation.stderr  missing_types.rs  missing_types.stderr  tmpl_syntax_error.rs  tmpl_syntax_error.stderr
despatma/tests/fail/dependency_container/: dependency_misspell.rs  dependency_misspell.stderr  impl_trait_but_requesting_concrete.rs  mismatch_return_type.rs  (+6 more)
(+16 files in other folders)
