[package]
name = "despatma-lib"
version = "0.1.0"
authors = ["chesedo <pieter@chesedo.me>"]
edition = "2018"
description = "Common tokens for Despatma"
repository = "https://github.com/chesedo/despatma/tree/main/despatma-lib"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
tokenstream2-tmpl = { workspace = true }

[dev-dependencies]
despatma-test-helpers = { path = "../despatma-test-helpers" }
pretty_assertions = { workspace = true }
syn = { workspace = true, features = ["extra-traits"] }

[features]
extra-traits = []
