[package]
name = "despatma"
version.workspace = true
authors = ["chesedo <pieter@chesedo.me>"]
edition = "2021"
description = "Design Pattern Macro like Loki"
repository = "https://github.com/chesedo/despatma"
license = "MIT"
keywords = ["macro", "design", "patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
despatma-lib = { path = "../despatma-lib", version = "0.2.0" }
indexmap = "2.3.0"
proc-macro-error = "1.0.4"

proc-macro2 = { workspace = true }
quote = { workspace = true }
strsim = "0.11.1"
syn = { workspace = true, features = ["full"] }
tokenstream2-tmpl = { workspace = true }


[dev-dependencies]
despatma-test-helpers = { path = "../despatma-test-helpers" }
despatma-lib = { path = "../despatma-lib", features = ["extra-traits"] }
macrotest = "1.0"
pretty_assertions = { workspace = true }
syn = { workspace = true, features = ["extra-traits"] }
trybuild = "1.0"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread", "time"] }
auto_impl = "1.2.0"
