[package]
name = "despatma"
version.workspace = true
authors = ["chesedo <pieter@chesedo.me>"]
edition = "2021"
description = "Design Pattern Macro like Loki"
repository = "https://github.com/chesedo/despatma"
license = "MIT"
keywords = ["macro", "design", "patterns"]

[dependencies]
despatma-abstract-factory = { version = "0.3.1", path = "../despatma-abstract-factory" }
despatma-dependency-container = { version = "0.3.1", path = "../despatma-dependency-container" }
despatma-lib = { version = "0.3.1", path = "../despatma-lib" }
despatma-visitor = { version = "0.3.1", path = "../despatma-visitor" }

[dev-dependencies]
auto_impl = "1.2.0"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread", "time"] }
