[package]
name = "despatma"
version.workspace = true
authors = ["chesedo <pieter@chesedo.me>"]
edition = "2021"
description = "Design Pattern Macro like Loki"
repository = "https://github.com/chesedo/despatma"
license = "MIT"
keywords = ["macro", "design", "patterns"]

[dependencies]
async-once-cell.workspace = true
despatma-abstract-factory = { version = "0.3.3", path = "../despatma-abstract-factory" }
despatma-dependency-container = { version = "0.3.3", path = "../despatma-dependency-container", default-features = false }
despatma-lib = { version = "0.3.3", path = "../despatma-lib" }
despatma-visitor = { version = "0.3.3", path = "../despatma-visitor" }

[dev-dependencies]
auto_impl = "1.2.0"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread", "time"] }
